[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gp-coords-widget"
version = "0.1.0"
description = "Continuous parallel coordinates widget for GP / function distributions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anywidget>=0.9",
    "traitlets>=5",
]

[tool.setuptools]
py-modules = ["gp_coords_widget"]
