[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gp-coords-widget"
version = "0.1.0"
description = "Continuous parallel coordinates widget for GP / function distributions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anywidget>=0.9",
    "traitlets>=5",
]

[tool.hatch.build.targets.wheel]
include = ["gp_coords_widget.py"]
